Refactor the properties